<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoinDetail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvCoinFromSymToSym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoCoinDetail"
        tools:text="SAMPLE" />

    <TextView
        android:id="@+id/tvPriceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/price_info_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCoinFromSymToSym" />

    <TextView
        android:id="@+id/tvPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvPriceInfo"
        app:layout_constraintTop_toBottomOf="@id/tvCoinFromSymToSym"
        tools:text="7000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#63000000"
        android:id="@+id/vBorder1"
        app:layout_constraintTop_toBottomOf="@id/tvPriceInfo" />

    <TextView
        android:id="@+id/tvMinByDayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/min_by_day_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vBorder1" />

    <TextView
        android:id="@+id/tvMinByDayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toEndOf="@id/tvMinByDayInfo"
        app:layout_constraintTop_toBottomOf="@id/vBorder1"
        tools:text="7000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#63000000"
        android:id="@+id/vBorder2"
        app:layout_constraintTop_toBottomOf="@id/tvMinByDayInfo" />

    <TextView
        android:id="@+id/tvMaxByDayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/max_by_day_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vBorder2" />

    <TextView
        android:id="@+id/tvMaxByDayValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_light"
        app:layout_constraintStart_toEndOf="@id/tvMaxByDayInfo"
        app:layout_constraintTop_toBottomOf="@id/vBorder2"
        tools:text="7000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#63000000"
        android:id="@+id/vBorder3"
        app:layout_constraintTop_toBottomOf="@id/tvMaxByDayInfo" />

    <TextView
        android:id="@+id/tvLastDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/last_deal_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vBorder3" />

    <TextView
        android:id="@+id/tvLastDealSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvLastDeal"
        app:layout_constraintTop_toBottomOf="@id/vBorder3"
        tools:text="Value" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#63000000"
        android:id="@+id/vBorder4"
        app:layout_constraintTop_toBottomOf="@id/tvLastDeal" />

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/update_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vBorder4" />

    <TextView
        android:id="@+id/tvTimeOfUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvUpdate"
        app:layout_constraintTop_toBottomOf="@id/vBorder4"
        tools:text="21:21:21" />


</androidx.constraintlayout.widget.ConstraintLayout>